--- a/index.html
+++ b/index.html
@@ -407,8 +407,9 @@ print(finalAnswer)</code></pre>
 error_rate = sum((my_testing$classe != rfPredicted) / length(rfPredicted))
 print(paste0(&quot;The in-sample error rate is: &quot;, error_rate))</code></pre>
 <pre><code>## [1] &quot;The in-sample error rate is: 0.00522559265867958&quot;</code></pre>
-<pre class="r"><code>print(paste0(&quot;The out of sample error rate should be grater than: &quot;, error_rate))</code></pre>
+<pre class="r"><code>print(paste0(&quot;The out of sample error rate should be grater than: &quot;, error_rate))  </code></pre>
 <pre><code>## [1] &quot;The out of sample error rate should be grater than: 0.00522559265867958&quot;</code></pre>
+<pre class="r"><code># The END</code></pre>
 </div>
 </div>
 
